@@ -11,6 +11,7 @@ ChangeLog
     * Make on the fly download throttling possible
     * Add mesh bed levelling event
     * Added command_id to telemetry, if there's a command in progress
+    * READY state changed to IDLE, PREPARED state changed to READY
 
 0.6.0 (2021-12-17)
     * Introduce `const.State.PREPARED`
